# Labors-CPP

./: .gitignore  Aufgabe0.cpp  Aufgabe1.cpp  Aufgabe10.cpp  Aufgabe11.cpp  Aufgabe12.cpp  Aufgabe15.cpp  Aufgabe16.cpp  Aufgabe17.cpp  Aufgabe18.cpp  Aufgabe19.cpp  Aufgabe2.cpp  Aufgabe20.cpp  Aufgabe3.cpp  Aufgabe4.cpp  Aufgabe5.cpp  Aufgabe6.cpp  Aufgabe7.cpp  Aufgabe8.cpp  Aufgabe9.cpp  CMakeLists.txt  CMakePresets.json  README.md
Aufgabe13/: CMakeLists.txt  Employee.cpp  Manager.cpp  Worker.h  main.cpp
Aufgabe14/: CMakeLists.txt  Employee.cpp  Employee.cppm  Employee.h  Manager.cppm  Manager.h  Worker.cpp  Worker.cppm  Worker.h  main.cpp
